# darkshore

./: Cargo.toml  Makefile  README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
auth_fn/: Cargo.toml
auth_fn/src/: main.rs
be/: Cargo.toml  Makefile  template.yaml
be/auth_fn/: Cargo.toml
be/auth_fn/src/: main.rs
be/put_fn/: Cargo.toml
be/put_fn/src/: main.rs
fe/: .gitignore  Cargo.toml  README.md
fe/amplify/: team-provider-info.json
fe/amplify/.config/: project-config.json
fe/amplify/backend/hosting/S3AndCloudFront/: parameters.json  template.json
fe/src/: lib.rs  model.rs  router.rs  spa.rs
fe/src/pages/: error.rs  home.rs  login.rs  mod.rs  verify.rs
put_fn/: Cargo.toml
put_fn/src/: main.rs
