[package]
name = "auth_fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
aws-smithy-client = { version = "0.52.0", features = ["test-util"] }
lambda_runtime = "0.7.2"
aws_lambda_events = "0.7.3"
serde_json = "1.0.91"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
http = "0.2.8"

[dev-dependencies]
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
